# marketing_calculators

./: .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  break_even_calculator.py  cac_calculator.py  churn_rate_calculator.py  clv_calculator.py  evc_calculator.py  linear_interpolation_calculator.py  nps_calculator.py  pyproject.toml  romi_calculator.py
.github/: copilot-instructions.md  copilot-review-skill.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
conjoint_analysis_calculator/: Attributs.xlsx  Ratings.xlsx  conjoint_analysis_calculator.py  usage.txt
relative_importance_calculator/: RelativeImportance.csv  relative_importance_calculator.py
tests/: test_placeholder.py
